--- a/Source/DualWield/DualWield.csproj
+++ b/Source/DualWield/DualWield.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Harmony\Pawn.cs" />
     <Compile Include="Harmony\PawnComponentsUtility.cs" />
     <Compile Include="Harmony\PawnRenderer.cs" />
+    <Compile Include="Harmony\Pawn_EquipmentTracker.cs" />
     <Compile Include="Harmony\Pawn_TryStartAttack.cs" />
     <Compile Include="Harmony\FloatMenuMakerMap.cs" />
     <Compile Include="Harmony\Verb.cs" />
@@ -71,6 +72,7 @@
     <Compile Include="Stances\Stance_Warmup_DW.cs" />
     <Compile Include="Storage\ExtendedDataStorage.cs" />
     <Compile Include="Storage\ExtendedPawnData.cs" />
+    <Compile Include="Storage\ExtendedThingWithCompsData.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
