only offhand weapon animation + stance busy working for offhand

--- a/Source/DualWield/DualWield.csproj
+++ b/Source/DualWield/DualWield.csproj
@@ -65,6 +65,8 @@
     <Compile Include="Harmony\FloatMenuMakerMap.cs" />
     <Compile Include="Harmony\Pawn_EquipmentTracker.cs" />
     <Compile Include="Harmony\Pawn_MeleeVerbs.cs" />
+    <Compile Include="Harmony\Pawn_RotationTracker.cs" />
+    <Compile Include="Harmony\Pawn_StanceTracker.cs" />
     <Compile Include="Harmony\Projectile.cs" />
     <Compile Include="Harmony\ThingOwner.cs" />
     <Compile Include="Harmony\Verb.cs" />
