--- a/Source/DualWield/DualWield.csproj
+++ b/Source/DualWield/DualWield.csproj
@@ -59,7 +59,7 @@
     <Compile Include="Extensions\Ext_Pawn.cs" />
     <Compile Include="Extensions\Ext_Pawn_EquipmentTracker.cs" />
     <Compile Include="Extensions\Ext_Verb.cs" />
-    <Compile Include="Harmony\PawnTweener.cs" />
+    <Compile Include="Harmony\Pawn_PathFollower.cs" />
     <Compile Include="Harmony\Pawn.cs" />
     <Compile Include="Harmony\PawnComponentsUtility.cs" />
     <Compile Include="Harmony\PawnRenderer.cs" />
