--- a/Source/DualWield/DualWield.csproj
+++ b/Source/DualWield/DualWield.csproj
@@ -59,6 +59,8 @@
     <Compile Include="Extensions\Ext_Pawn.cs" />
     <Compile Include="Extensions\Ext_Pawn_EquipmentTracker.cs" />
     <Compile Include="Extensions\Ext_Verb.cs" />
+    <Compile Include="Settings\DictRecordHandler.cs" />
+    <Compile Include="Settings\GUIDrawUtility.cs" />
     <Compile Include="Harmony\Pawn_PathFollower.cs" />
     <Compile Include="Harmony\Pawn.cs" />
     <Compile Include="Harmony\PawnComponentsUtility.cs" />
@@ -75,6 +77,7 @@
     <Compile Include="Harmony\Verb.cs" />
     <Compile Include="Jobs\JobDriver_EquipOffHand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Settings\Record.cs" />
     <Compile Include="Stances\Stance_Cooldown_DW.cs" />
     <Compile Include="Stances\Stance_Warmup_DW.cs" />
     <Compile Include="Storage\ExtendedDataStorage.cs" />
