--- a/Source/DualWield/DualWield.csproj
+++ b/Source/DualWield/DualWield.csproj
@@ -59,7 +59,9 @@
     <Compile Include="Extensions\Ext_Pawn.cs" />
     <Compile Include="Extensions\Ext_Pawn_EquipmentTracker.cs" />
     <Compile Include="Extensions\Ext_ThingDef.cs" />
+    <Compile Include="Extensions\Ext_ThingWithComps.cs" />
     <Compile Include="Extensions\Ext_Verb.cs" />
+    <Compile Include="Harmony\Verb_MeleeAttack.cs" />
     <Compile Include="Settings\DictRecordHandler.cs" />
     <Compile Include="Settings\GUIDrawUtility.cs" />
     <Compile Include="Harmony\Pawn_PathFollower.cs" />
