--- a/Source/DualWield/DualWield.csproj
+++ b/Source/DualWield/DualWield.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Extensions\Ext_ThingDef.cs" />
     <Compile Include="Extensions\Ext_ThingWithComps.cs" />
     <Compile Include="Extensions\Ext_Verb.cs" />
+    <Compile Include="Harmony\VerbProperties.cs" />
     <Compile Include="Harmony\Verb_MeleeAttack.cs" />
     <Compile Include="Settings\DictRecordHandler.cs" />
     <Compile Include="Settings\GUIDrawUtility.cs" />
