--- a/Source/DualWield/DualWield.csproj
+++ b/Source/DualWield/DualWield.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Harmony\Jobdriver_Wait.cs" />
     <Compile Include="Harmony\VerbTracker.cs" />
     <Compile Include="ModExtension\DefModextension_CustomRotation.cs" />
+    <Compile Include="ModExtension\DefModextension_DefaultSettings.cs" />
     <Compile Include="Settings\Dialog_Weapon_Rotation.cs" />
     <Compile Include="DW_DefOff.cs" />
     <Compile Include="Extensions\Ext_Pawn.cs" />
